testsuite/poke.pkl/array-diag-1.pk
/* { dg-do compile } */

deftype Array = int[2];  /* { dg-error "" } */

